editors/tree-sitter-ply/grammar.js
    source_file: $ => repeat(choice($.import_declaration, $._item)),

    // --- Imports ------------------------------------------------------------

    import_declaration: $ => seq(
      'import',
      $.module_path,
      optional(choice(
        seq('as', $.identifier),
        seq('(', commaSep1($.identifier), ')'),
      )),
    ),

    module_path: $ => seq($.identifier, repeat(seq('.', $.identifier))),

    // --- Items --------------------------------------------------------------

    _item: $ => choice(
      $.function_definition,
      $.extern_function,
      $.type_definition,
      $.effect_definition,
      $.effect_set_definition,
      $.test_declaration,
      $.law_declaration,
      $.law_schema_declaration,
      $.derive_declaration,
      $.key_declaration,
      $.show_declaration,
      $.gen_declaration,
      $.numeric_declaration,
    ),

    function_definition: $ => seq(
      optional('pub'),
      optional(choice(
        seq(optional('transparent'), optional('reuse')),
        'const',
      )),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type), optional($.effect_row))),
      repeat($._spec_clause),
      optional(choice(
        seq('=', field('body', $._expression)),
        field('body', $.block),
      )),
    ),

    _spec_clause: $ => choice(
      $.where_clause,
      $.returns_clause,
      $.decreases_clause,
      $.requires_clause,
      $.ensures_clause,
      $.cost_clause,
    ),

    parameter_list: $ => seq('(', optional(commaSep1($.parameter)), ')'),
    parameter: $ => seq(
      field('name', choice($.identifier, $.wildcard)),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    generic_parameters: $ => choice(
      seq('<', $.type_gt),
      seq('<', commaSep1($._generic_parameter), optional(seq('|', optional(commaSep1($.row_parameter)))), $.type_gt),
      seq('<', '|', commaSep1($.row_parameter), $.type_gt),
    ),
    _generic_parameter: $ => choice($.type_parameter, $.label_parameter),
    type_parameter: $ => $.identifier,
    row_parameter: $ => $.identifier,

    // --- Types --------------------------------------------------------------

    type_definition: $ => seq(
      optional('pub'),
      optional('opaque'),
      'type',
      field('name', $.identifier),
      optional($.generic_parameters),
      '=',
      choice($.new_record_body, $.sum_type_body, $.alias_type),
    ),

    new_record_body: $ => seq('new', $.record_type),

    sum_type_body: $ => seq(
      optional('|'),
      sep1('|', $.sum_variant),
    ),
    sum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq('(', optional(commaSep1(field('variant', $._type))), ')')),
    ),

    _type: $ => choice(
      $.function_type,
      $.record_type,
      $.tuple_type,
      $.type_application,
      $.identifier,
      $.parenthesized_type,
      $.unit_type,
    ),

    // `List<Int>`, `Map<k, v>`, `fs::MemFs`, `bin::BinCodec<EmbedRead>`; a bare name is a
    // `type_variable` in a signature and a `type_constructor` in a body, which the checker tells
    // apart by case, so one token serves both and a query reads the case.
    type_application: $ => choice(
      seq(
        optional(seq(field('module', $.identifier), '::')),
        field('name', $.identifier),
        $.type_arguments,
      ),
      seq(field('module', $.identifier), '::', field('name', $.identifier)),
    ),

    type_arguments: $ => choice(
      seq('<', commaSep1($._type_argument), optional(seq('|', optional(commaSep1($.row)))), $.type_gt),
      seq('<', '|', commaSep1($.row), $.type_gt),
    ),
    _type_argument: $ => choice($._type, $.label_argument),
    function_type: $ => prec.right(1, seq(
      optional($.generic_parameters),
      '(',
      optional(commaSep1(field('parameter', $._type))),
      ')',
      '->',
      field('return_type', $._type),
      optional($.effect_row),
      optional($.cost_clause),
    )),

    tuple_type: $ => seq('(', $._type, ',', commaSep1($._type), ')'),
    record_type: $ => seq('{', commaSep1($.record_type_field), '}'),
    record_type_field: $ => seq(field('name', FIELD_NAME($)), ':', field('type', $._type)),

    // --- Effects ------------------------------------------------------------

    effect_definition: $ => seq(
      optional('pub'),
      optional('nondet'),
      'effect',
      field('name', $.identifier),
      '{',
      repeat(seq($.operation, optional(','))),
      '}',
    ),

    operation: $ => seq(
      field('mode', choice('read', 'write', 'raise')),
      field('name', $.identifier),
      optional($.resource_label),
      optional($.type_parameters),
      $.operation_parameters,
      optional(seq('->', field('return_type', $._type))),
    ),
    operation_parameters: $ => seq('(', optional(commaSep1($.operation_parameter)), ')'),
    operation_parameter: $ => choice(
      seq(field('name', $.identifier), ':', field('type', $._type)),
      field('type', $._type),
    ),

    effect_set_definition: $ => seq(
      optional('pub'),
      'effect', 'set',
      field('name', $.identifier),
      '=',
      $.effect_set,
    ),
    effect_set: $ => seq('{', commaSep1($._effect_set_entry), '}'),
    _effect_set_entry: $ => choice($.atom, $.qualified_name, $.identifier),

    // An atom is `effect.mode[resource]`, or `effect.mode` for a singleton.
    atom: $ => choice(
      'diverges',
      seq(
        field('effect', choice($.qualified_name, $.identifier)),
        '.',
        field('mode', choice('read', 'write', $.identifier)),
        optional($.resource_label),
      ),
    ),

    effect_row: $ => seq('/', choice($.row, seq($.row, 'bounded'))),
    row: $ => choice(
      seq('{', optional($._row_body), '}'),
      $.row_variable,
    ),
    _row_body: $ => seq(
      commaSep1($.row_atom),
      optional(seq('|', choice('diverges', $.row_variable), optional('bounded'))),
    ),
    row_atom: $ => seq(choice($.atom, $.qualified_name, $.identifier), optional('bounded')),
    row_variable: $ => $.identifier,

    // --- Tests and laws -----------------------------------------------------

    test_declaration: $ => seq(
      'test',
      optional(seq('/', 'nondet')),
      field('label', $.label),
      optional(seq(
        'for',
        field('case', $.identifier),
        ':',
        field('case_type', $._type),
        'in',
        field('table', $._expression),
      )),
      field('body', $.block),
    ),

    law_declaration: $ => seq(
      'law',
      optional(seq('/', 'host')),
      field('label', $.label),
      optional(choice(
        seq('=', field('instantiation', $._expression)),
        seq(
          optional(seq('forall', '(', commaSep1($.binder), ')')),
          optional(seq('where', field('guard', $._expression))),
          optional($.cost_clause),
          field('body', $.block),
        ),
      )),
    ),

    law_schema_declaration: $ => seq(
      optional('pub'),
      'law', 'schema',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameter_list,
      optional(seq('forall', '(', commaSep1($.binder), ')')),
      optional(seq('where', field('guard', $._expression))),
      optional($.cost_clause),
      field('body', $.block),
    ),

    binder: $ => seq(field('name', $.identifier), ':', field('type', $._type)),

    derive_declaration: $ => seq(
      optional('pub'),
      'derive',
      field('deriver', $.identifier),
      'for',
      field('type', $._type),
    ),

    key_declaration: $ => seq(optional('pub'), 'key', 'for', field('type', $._type), 'by', field('function', $.identifier)),
    numeric_declaration: $ => seq(
      optional('pub'),
      'numeric',
      'for',
      field('type', $._type),
      'by',
      '{',
      commaSep1($.numeric_operation),
      '}',
    ),
    numeric_operation: $ => seq(
      field('operation', choice('add', 'sub', 'mul', 'neg', 'of_int')),
      ':',
      field('function', $.identifier),
    ),

    // --- Expressions --------------------------------------------------------

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.qualified_name,
      $.field_expression,
      $.call_expression,
      $.try_expression,
      $.unary_expression,
      $._binary_expression,
      $.if_expression,
      $.match_expression,
      $.lambda_expression,
      $.block,
      $.record_literal,
      $.record_update,
      $.list_literal,
      $.map_literal,
      $.set_literal,
      $.tuple_expression,
      $.parenthesized_expression,
      $.handle_expression,
      $.try_block,
      $.with_cell_expression,
      $.with_hold_expression,
      $.simulate_expression,
      $.parallel_expression,
    ),

    field_expression: $ => prec(PREC.field, seq(
      field('base', $._expression),
      '.',
      field('field', choice($.identifier, $.tuple_field)),
    )),
    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression),
      optional($.resource_label),
      field('arguments', $.argument_list),
    )),
    argument_list: $ => seq('(', optional(commaSep1($._argument)), ')'),
    _argument: $ => choice($.named_argument, $._expression),
    resource_label: $ => seq('[', commaSep1(choice($.identifier, $.wildcard_label)), ']'),
    wildcard_label: $ => seq('*', optional($.identifier)),

    try_expression: $ => prec(PREC.try, seq($._expression, '?')),

    if_expression: $ => prec.right(1, seq(
      'if',
      field('condition', $._expression),
      field('then', $.block),
      optional(seq('else', field('otherwise', choice($.if_expression, $.block)))),
    )),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      commaSep1($.match_arm),
      '}',
    ),
    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '->',
      field('body', $._expression),
    ),

    lambda_expression: $ => prec.right(seq(
      choice(
        seq('|', commaSep1($.lambda_parameter), '|'),
        '||',
      ),
      optional(seq('->', field('return_type', $._type))),
      field('body', $._expression),
    )),
    lambda_parameter: $ => seq(
      choice(field('name', $.identifier), '_'),
      optional(seq(':', field('type', $._type))),
    ),

    block: $ => prec.dynamic(2, prec(2, seq('{', repeat($._statement), '}'))),
    _statement: $ => choice(
      $.let_statement,
      $.expression_statement,
    ),
    let_statement: $ => seq(
      'let',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      optional(seq('else', field('otherwise', $.block))),
      ';',
    ),
    expression_statement: $ => seq($._expression, optional(';')),

    // `{x}` is a block whose value is `x`; a record needs a named field or, punned, a comma.
    record_literal: $ => prec(1, seq('{', choice(
      seq($.record_field_value, repeat(seq(',', $.record_field)), optional(',')),
      seq($.record_field_punned, repeat1(seq(',', $.record_field)), optional(',')),
    ), '}')),
    record_field: $ => choice($.record_field_value, $.record_field_punned),
    record_field_value: $ => seq(
      field('name', choice($.identifier, $._keyword, $.tuple_field)),
      ':',
      field('value', $._expression),
    ),
    list_literal: $ => seq('[', optional(commaSep1($._expression)), ']'),
    map_literal: $ => seq('#{', optional(commaSep1($.map_entry)), '}'),
    map_entry: $ => seq(field('key', $._expression), ':', field('value', $._expression)),
    set_literal: $ => seq('#[', optional(commaSep1($._expression)), ']'),

    handle_expression: $ => seq(
      'handle',
      field('body', $._expression),
      'with',
      '{',
      commaSep1($.handler_clause),
      '}',
    ),
    handler_clause: $ => choice($.return_clause, $.operation_clause),
    return_clause: $ => seq('return', field('binder', $.identifier), '->', field('body', $._expression)),
    operation_clause: $ => seq(
      field('operation', $.operation_name),
      optional($.resource_label),
      field('parameters', $.clause_parameters),
      optional(seq('resume', field('continuation', $.identifier))),
      '->',
      field('body', $._expression),
    ),
    clause_parameters: $ => seq('(', optional(commaSep1(choice($.identifier, $.wildcard))), ')'),
    operation_name: $ => seq(
      field('effect', choice($.qualified_name, $.identifier)),
      '.',
      field('operation', $.identifier),
    ),

    try_block: $ => seq('try', optional($.raise_name), field('body', $.block)),
    with_cell_expression: $ => seq(
      'with_cell',
      field('label', $.resource_label),
      '(',
      commaSep1(field('initial', $._expression)),
      ')',
      field('body', $.with_binder_body),
    ),
    with_binder_body: $ => seq('{', field('binder', $.identifier), '->', field('body', $._expression), '}'),

    parallel_expression: $ => seq(
      'parallel',
      '{',
      commaSep1($._expression),
      '}',
    ),

    // --- Patterns -----------------------------------------------------------

    _pattern: $ => choice(
      $.wildcard,
      $.identifier,
      $.literal_pattern,
      $.range_pattern,
      $.constructor_pattern,
      $.list_pattern,
      $.record_pattern,
      $.tuple_pattern,
      $.parenthesized_pattern,
      $.or_pattern,
    ),

    wildcard: $ => '_',

    literal_pattern: $ => choice(
      $.number,
      $.string,
      $.bytes_string,
      $.char_literal,
      $.byte_literal,
      'true',
      'false',
      $.unit,
      seq('-', $.number),
    ),

    range_pattern: $ => seq($.literal_pattern, '..=', $.literal_pattern),

    boolean: $ => choice('true', 'false'),
    unit: $ => seq('(', ')'),

    _keyword: $ => choice(...RESERVED),

    number: $ => token(choice(
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*(u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
      /[0-9][0-9_]*(\.[0-9][0-9_]*)?([eE][+-]?[0-9][0-9_]*)?(m|u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
    )),

    string: $ => seq(
      '"',
      repeat(choice($.escape_sequence, $.string_content)),
      '"',
    ),
    string_content: $ => token.immediate(prec(10, /[^"\\\n]+/)),
    escape_sequence: $ => token.immediate(/\\(u\{[0-9a-fA-F]{1,6}\}|x[0-9a-fA-F]{2}|[0nrt'"\\])/),

    bytes_string: $ => seq(
      $.bytes_open,
      repeat(choice($.escape_sequence, $.bytes_content)),
      '"',
    ),
    bytes_open: $ => token('b"'),
    bytes_content: $ => token.immediate(prec(10, /[^"\\\n]+/)),

    interpolated_string: $ => seq(
      $.interpolation_open,
      repeat(choice($.interpolation, $.escape_sequence, $.interpolated_content)),
      '"',
    ),
    interpolation_open: $ => token('f"'),
    interpolated_content: $ => token.immediate(prec(10, /([^"\\{}\n]|\{\{|\}\})+/)),
    interpolation: $ => seq('{', field('value', $._expression), '}'),

    tagged_string: $ => seq(
      field('tag', $.identifier),
      $.tag_open,
      repeat(choice($.interpolation, $.escape_sequence, $.interpolated_content)),
      '"',
    ),
    tag_open: $ => token.immediate('"'),

    char_literal: $ => token(/'(\\.|[^'\\\n])*'/),
    byte_literal: $ => token(/b'(\\.|[^'\\\n])*'/),

    line_string: $ => token(/(\\\\[^\n]*)(\n[ \t]*\\\\[^\n]*)*/),

    // --- Comments -----------------------------------------------------------

    module_doc_comment: $ => token(prec(3, /\/\/![^\n]*/)),
    item_doc_comment: $ => token(prec(2, /\/\/\/[^\n]*/)),
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

function sep1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)));
}
