editors/tree-sitter-ply/test/corpus/expressions.txt
================================================================================
expressions, handlers and rows
================================================================================

fn f<a, b | e>(x: a, g: (a) -> b / e) -> b / {abort.raise | e} {
  let y = g(x)?;
  match y { _ -> if true { 1 } else { 2 } }
}

fn h() -> Int =
  handle g() with {
    clock.now() -> 1,
    db.get[users](k) resume r -> r(0),
    db.put[*](k, v) -> (),
    return v -> v,
  }

fn both(xs: List<Int>) -> (Int, Int) =
  parallel { fold(xs, 0, |a: Int, x: Int| a + x), len(xs) }

fn frame() -> Int = {
  with_cell[users](0) { c -> c + 1 }
}

fn guarded(b: Bytes, i: Int) -> Result<Int, String> / {abort.raise} = {
  let n = match bytes_at(b, i) { b'0'..=b'9' -> 1, _ -> 0 }?;
  n
}

fn taken() -> Int / {toml.syntax} = try { toml.syntax({ line: 1, why: "x" }) }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (generic_parameters
      (type_parameter
        (identifier))
      (type_parameter
        (identifier))
      (row_parameter
        (identifier))
      (type_gt))
    (parameter_list
      (parameter
        (identifier)
        (identifier))
      (parameter
        (identifier)
        (function_type
          (identifier)
          (identifier)
          (effect_row
            (row
              (row_variable
                (identifier)))))))
    (identifier)
    (effect_row
      (row
        (row_atom
          (atom
            (identifier)
            (identifier)))
        (row_variable
          (identifier))))
    (block
      (let_statement
        (identifier)
        (try_expression
          (call_expression
            (identifier)
            (argument_list
              (identifier)))))
      (expression_statement
        (match_expression
          (identifier)
          (match_arm
            (wildcard)
            (if_expression
              (boolean)
              (block
                (expression_statement
                  (number)))
              (block
                (expression_statement
                  (number)))))))))
  (function_definition
    (identifier)
    (parameter_list)
    (identifier)
    (handle_expression
      (call_expression
        (identifier)
        (argument_list))
      (handler_clause
        (operation_clause
          (operation_name
            (identifier)
            (identifier))
          (clause_parameters)
          (number)))
      (handler_clause
        (operation_clause
          (operation_name
            (identifier)
            (identifier))
          (resource_label
            (identifier))
          (clause_parameters
            (identifier))
          (identifier)
          (call_expression
            (identifier)
            (argument_list
              (number)))))
      (handler_clause
        (operation_clause
          (operation_name
            (identifier)
            (identifier))
          (resource_label
            (wildcard_label))
          (clause_parameters
            (identifier)
            (identifier))
          (unit)))
      (handler_clause
        (return_clause
          (identifier)
          (identifier)))))
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_application
          (identifier)
          (type_arguments
            (identifier)
            (type_gt)))))
    (tuple_type
      (identifier)
      (identifier))
    (parallel_expression
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (number)
          (lambda_expression
            (lambda_parameter
              (identifier)
              (identifier))
            (lambda_parameter
              (identifier)
              (identifier))
            (identifier)
            (identifier))))
      (call_expression
        (identifier)
        (argument_list
          (identifier)))))
  (function_definition
    (identifier)
    (parameter_list)
    (identifier)
    (block
      (expression_statement
        (with_cell_expression
          (resource_label
            (identifier))
          (number)
          (with_binder_body
            (identifier)
            (identifier)
            (number))))))
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (identifier))
      (parameter
        (identifier)
        (identifier)))
    (type_application
      (identifier)
      (type_arguments
        (identifier)
        (identifier)
        (type_gt)))
    (effect_row
      (row
        (row_atom
          (atom
            (identifier)
            (identifier)))))
    (block
      (let_statement
        (identifier)
        (try_expression
          (match_expression
            (call_expression
              (identifier)
              (argument_list
                (identifier)
                (identifier)))
            (match_arm
              (range_pattern
                (literal_pattern
                  (byte_literal))
                (literal_pattern
                  (byte_literal)))
              (number))
            (match_arm
              (wildcard)
              (number)))))
      (expression_statement
        (identifier))))
  (function_definition
    (identifier)
    (parameter_list)
    (identifier)
    (effect_row
      (row
        (row_atom
          (atom
            (identifier)
            (identifier)))))
    (try_block
      (block
        (expression_statement
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list
              (record_literal
                (record_field_value
                  (identifier)
                  (number))
                (record_field
                  (record_field_value
                    (identifier)
                    (string
                      (string_content))))))))))))
