editors/tree-sitter-ply/test/corpus/items.txt
================================================================================
imports, items and labels
================================================================================

//! A module.

import std.list (push, fold)
import store.orders as orders

/// Adds one.
pub fn bump<a | e>(x: Int, g: (Int) -> Int / e) -> Int / {abort.raise | e} = x + 1

pub opaque type Date = new { year: Int, month: Int }

type Shape = | Circle(Int) | Rect(Int, Int) | Point

effect log {
  write note[r](m: String) -> Unit
  read count() -> Int
}

nondet effect clock { read now() -> Int }

pub effect set Logs = {log.write, clock.read}

test "bump {x}" for x: Int in [1, 2] { assert_eq(bump(x, |n: Int| n), x + 1) }

test/nondet "clock" { assert_true(true) }

law "identity" = agrees(|x: Int| x, |x: Int| x)

pub law schema round_trip<a>(f: (a) -> String) forall (x: a) where x == x { f(x) == x }

derive eq for Date
key for Date by by_year
numeric for Date by { add: add, sub: sub, mul: mul, neg: neg, of_int: of_int }

--------------------------------------------------------------------------------

(source_file
  (module_doc_comment)
  (import_declaration
    (module_path
      (identifier)
      (identifier))
    (identifier)
    (identifier))
  (import_declaration
    (module_path
      (identifier)
      (identifier))
    (identifier))
  (item_doc_comment)
  (function_definition
    (identifier)
    (generic_parameters
      (type_parameter
        (identifier))
      (row_parameter
        (identifier))
      (type_gt))
    (parameter_list
      (parameter
        (identifier)
        (identifier))
      (parameter
        (identifier)
        (function_type
          (identifier)
          (identifier)
          (effect_row
            (row
              (row_variable
                (identifier)))))))
    (identifier)
    (effect_row
      (row
        (row_atom
          (atom
            (identifier)
            (identifier)))
        (row_variable
          (identifier))))
    (identifier)
    (number))
  (type_definition
    (identifier)
    (new_record_body
      (record_type
        (record_type_field
          (identifier)
          (identifier))
        (record_type_field
          (identifier)
          (identifier)))))
  (type_definition
    (identifier)
    (sum_type_body
      (sum_variant
        (identifier)
        (identifier))
      (sum_variant
        (identifier)
        (identifier)
        (identifier))
      (sum_variant
        (identifier))))
  (effect_definition
    (identifier)
    (operation
      (identifier)
      (resource_label
        (identifier))
      (operation_parameters
        (operation_parameter
          (identifier)
          (identifier)))
      (identifier))
    (operation
      (identifier)
      (operation_parameters)
      (identifier)))
  (effect_definition
    (identifier)
    (operation
      (identifier)
      (operation_parameters)
      (identifier)))
  (effect_set_definition
    (identifier)
    (effect_set
      (atom
        (identifier))
      (atom
        (identifier))))
  (test_declaration
    (label)
    (identifier)
    (identifier)
    (list_literal
      (number)
      (number))
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (call_expression
              (identifier)
              (argument_list
                (identifier)
                (lambda_expression
                  (lambda_parameter
                    (identifier)
                    (identifier))
                  (identifier))))
            (identifier)
            (number))))))
  (test_declaration
    (label)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (boolean))))))
  (law_declaration
    (label)
    (call_expression
      (identifier)
      (argument_list
        (lambda_expression
          (lambda_parameter
            (identifier)
            (identifier))
          (identifier))
        (lambda_expression
          (lambda_parameter
            (identifier)
            (identifier))
          (identifier)))))
  (law_schema_declaration
    (identifier)
    (generic_parameters
      (type_parameter
        (identifier))
      (type_gt))
    (parameter_list
      (parameter
        (identifier)
        (function_type
          (identifier)
          (identifier))))
    (binder
      (identifier)
      (identifier))
    (identifier)
    (identifier)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (identifier)))
        (identifier))))
  (derive_declaration
    (identifier)
    (identifier))
  (key_declaration
    (identifier)
    (identifier))
  (numeric_declaration
    (identifier)
    (numeric_operation
      (identifier))
    (numeric_operation
      (identifier))
    (numeric_operation
      (identifier))
    (numeric_operation
      (identifier))
    (numeric_operation
      (identifier))))
