editors/tree-sitter-ply/test/corpus/literals.txt
================================================================================
literals
================================================================================

fn literals() -> Unit = {
  let a = 42;
  let b = 1_000_000;
  let c = 0xFFu8;
  let d = 1.5e-3;
  let e = 2.50m;
  let f = "text\n";
  let g = b"GET \x00";
  let h = 'a';
  let i = b'{';
  let j = f"n = {a + 1} and {{braces}}";
  let k = uuid"6ba7b810-9dad-11d1-80b4-00c04fd430c8";
  let m = \\line one
  \\line two
  ;
  let n = #{1: "a", 2: "b"};
  let o = #[1, 2];
  let p = [1, 2, 3];
  ()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (identifier)
    (block
      (let_statement
        (identifier)
        (number))
      (let_statement
        (identifier)
        (number))
      (let_statement
        (identifier)
        (number))
      (let_statement
        (identifier)
        (number))
      (let_statement
        (identifier)
        (number))
      (let_statement
        (identifier)
        (string
          (string_content)
          (escape_sequence)))
      (let_statement
        (identifier)
        (bytes_string
          (bytes_open)
          (bytes_content)
          (escape_sequence)))
      (let_statement
        (identifier)
        (char_literal))
      (let_statement
        (identifier)
        (byte_literal))
      (let_statement
        (identifier)
        (interpolated_string
          (interpolation_open)
          (interpolated_content)
          (interpolation
            (identifier)
            (number))
          (interpolated_content)))
      (let_statement
        (identifier)
        (tagged_string
          (identifier)
          (tag_open)
          (interpolated_content)))
      (let_statement
        (identifier)
        (line_string))
      (let_statement
        (identifier)
        (map_literal
          (map_entry
            (number)
            (string
              (string_content)))
          (map_entry
            (number)
            (string
              (string_content)))))
      (let_statement
        (identifier)
        (set_literal
          (number)
          (number)))
      (let_statement
        (identifier)
        (list_literal
          (number)
          (number)
          (number)))
      (expression_statement
        (unit)))))
